--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "chalk": "^2.0.1",
-    "express": "^4.15.3"
+    "chokidar": "^1.7.0",
+    "express": "^4.15.3",
+    "nunjucks": "^3.0.1"
   }
 }
