--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chalk": "^2.0.1",
     "chokidar": "^1.7.0",
     "express": "^4.15.3",
+    "lodash": "^4.17.4",
     "nunjucks": "^3.0.1"
   }
 }
