--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "chalk": "^2.0.1",
-    "chokidar": "^1.7.0",
     "express": "^4.15.3",
     "lodash": "^4.17.4",
-    "nunjucks": "^3.0.1"
+    "nunjucks": "^3.0.1",
+    "socket.io": "^2.0.3"
   }
 }
